samples/_failures_safe/1761253717_cc7881_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_85e3ff87.c: In function ‘parser_parse_expression’:
./samples/SAFE/__tmp_85e3ff87.c:165:16: error: missing terminating " character
  165 |         printf("Found
      |                ^~~~~~
./samples/SAFE/__tmp_85e3ff87.c:165:9: error: expected expression at end of input
  165 |         printf("Found
      |         ^~~~~~
./samples/SAFE/__tmp_85e3ff87.c:165:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_85e3ff87.c:165:9: error: expected declaration or statement at end of input
